<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".fragment.SignUpFragment">
        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:src="@drawable/signupimage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Your Account"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/signUpFragmentUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextbackground"
            android:textColor="@color/black"
            android:ems="10"
            android:drawableLeft="@drawable/usericon"
            android:drawablePadding="10dp"
            android:hint="@string/signup_username_hint"
            android:textColorHint="@color/material_dynamic_neutral_variant70"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/signUpFragmentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:drawableLeft="@drawable/emailicon"
            android:drawablePadding="10dp"
            android:hint="@string/signInEmailHint"
            android:textColorHint="@color/material_dynamic_neutral_variant70"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/signUpFragmentPassword"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:drawableLeft="@drawable/passwordicon"
            android:drawablePadding="10dp"
            android:hint="@string/signInPasswordHint"
            android:textColorHint="@color/material_dynamic_neutral_variant70"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/signUpFragmentConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/passwordicon"
            android:drawablePadding="10dp"
            android:hint="@string/signUpPasswordConfirmHint"
            android:textColorHint="@color/material_dynamic_neutral_variant70"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/deep_seagreen"
            android:text="@string/signin_btn_text"
            android:textColor="@color/verylightgreen"
            android:fontFamily="@font/poppins"/>


    </LinearLayout>
</ScrollView>

