<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".fragment.SignInFragment">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="212dp"
            android:src="@drawable/desktopcomputer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome Back!"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/signInFragmentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableLeft="@drawable/emailicon"
            android:drawablePadding="10dp"
            android:hint="@string/signInEmailHint"
            android:textColorHint="@color/material_dynamic_neutral_variant70"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextbackground"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/signInFragmentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableLeft="@drawable/passwordicon"
            android:drawablePadding="10dp"
            android:hint="@string/signInPasswordHint"
            android:background="@drawable/edittextbackground"
            android:textColorHint="@color/material_dynamic_neutral_variant70"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"/>
        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textAlignment="textEnd"
            android:textSize="13sp"
            android:paddingRight="5dp"
            android:textColor="@color/material_dynamic_neutral40"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/deep_seagreen"
            android:text="@string/signin_btn_text"
            android:textColor="@color/verylightgreen"
            android:fontFamily="@font/poppins"/>



    </LinearLayout>
</ScrollView>
